--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 systemProp.gradle.user.home=C:/gradlerepo/repo1_jdk17
+#org.gradle.warning.mode=(all,fail,summary,none)
+#org.gradle.warning.mode=all
+#org.gradle.warning.mode=fail
+#org.gradle.warning.mode=summary
+org.gradle.warning.mode=none
